--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
+
+body {
+    font-family: 'Noto Sans TC', sans-serif;
+}
 * {
     margin: 0;
     padding: 0;
