--- a/public/css/users.css
+++ b/public/css/users.css
@@ -6,18 +6,19 @@
 }
 .user {
     color: rgb(25, 0, 255);
-    width: 500px;
+    width: 50%;
     padding: 0 5px;
 }
 
-.user-form {
+.change-form {
     display: flex;
     justify-content: space-around;
-    width: 23%;
+    width: 30%;
     height: 100%;
     align-items: center;
 }
 input {
+    padding: 3px;
     margin-right: 7px;
     height: 25px;
     border: 1px solid orangered;
@@ -40,4 +41,18 @@ button {
 
 .btn-delete {
     background-color: rgb(179, 22, 22);
+}
+
+.delete-form {
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+span {
+    color: red
+}
+
+.character {
+    color: green;
 }
