--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Noto Sans TC', sans-serif;
+    font-size: 1em;
 }
 * {
     margin: 0;
@@ -13,10 +14,11 @@ body {
     height: 80px;
     background-color: rgb(9, 71, 187);
     color: #000000;
+    display: flex;
+    justify-content: space-between;
 }
 
-ul {
-    width: 17%;
+.left-nav-block {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -30,6 +32,10 @@ li {
 .main-ref {
     text-decoration: none;
     color: #ffffff;
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+    margin-right: 15px;
 }
 
 .main-ref:active,
@@ -44,4 +50,19 @@ li {
 .showing-text {
     width: 60%;
     margin: 0 auto;
+}
+
+.logout-btn {
+    background-color: rgb(9, 71, 187);
+    font-size: 1em;
+    cursor: pointer;
+    color: white;
+    border: none;
+    margin: 0;
+    padding: 0;
+}
+
+.log-block {
+    display: flex;
+    align-items: center;
 }
